Fix some spacing issues

--- a/sass/new.scss
+++ b/sass/new.scss
@@ -8,21 +8,7 @@ $mini-accent: #9ecee3;
 $font-stack: 'Open Sans', sans-serif;
 
 
-
-.logo {
-	background-color: $accent;
-	max-height: 8.1em;
-
-	img {
-		position: relative;
-		top: -0.4em;
-		height: 220px;
-		width: 150px;
-		margin: 0 auto;
-		display: block;
-		margin: 0 auto;
-	}
-}
+/*========GRID/LAYOUT=======*/
 
 .full-width {
 	width: 100%;
@@ -36,13 +22,60 @@ $font-stack: 'Open Sans', sans-serif;
 	color: $text-color;
 }
 
-.top-row {
-	margin-top: 100px;
+.col-container {
+	width: 100%;
 }
 
-.regular-row {
-	margin-top: 30px;
+/*========TYPOGRAPHY=======*/
+
+h3 {
+	text-align: center;
+	margin-bottom: 2rem;
 }
+
+h4 {
+	text-align: center;
+	margin-top: 3rem;
+	margin-bottom: 1rem;
+}
+
+/*========BUTTON=======*/
+.button-container {
+	margin: 0 auto;
+	margin-bottom: 25px;
+	width: 136px;
+}
+
+.button {
+	width: 136px;
+	margin: 0 auto;
+	border: 1px solid $mini-accent;
+	border-radius: 10px;
+	background-color: #fff;
+	height: 40px;
+	padding: 1rem 1.5rem 1.0625rem 1.6rem;
+
+  &:hover,
+  &:focus {
+      border: 1px solid $accent;
+      background-color: $accent;
+    }
+}
+
+a.button {
+	line-height: 7px;
+	text-decoration: none;
+	color: $text-color;
+	letter-spacing: 0.1em;
+
+	&:hover,
+	&:focus {
+		color: $text-color;
+	}
+}
+
+
+/*========NAVIGATION=======*/
 
 .top-bar.expanded .toggle-topbar a {
   color: $text-color;
@@ -89,21 +122,40 @@ $font-stack: 'Open Sans', sans-serif;
 	}
 }
 
+/*========LOGO/HEADER=======*/
+
+.logo {
+	background-color: $accent;
+	max-height: 8.1em;
+	margin-bottom: 100px;
+
+	img {
+		position: relative;
+		top: -0.4em;
+		height: 220px;
+		width: 150px;
+		margin: 0 auto;
+		display: block;
+		margin: 0 auto;
+	}
+}
+
 /*========ABOUT=======*/
 
-  .social {
-    padding-top: 25px;
-    img {
-      padding: 15px;
-      position: relative;
-      top: 0px;
-      -webkit-transition: top 0.4s ease;
-      -moz-transition: top 0.4s ease;
-      -o-transition: top 0.4s ease;
+.social {
+	text-align: center;
 
-      &:hover,
-      &:focus {
-        top: -10px;
-      }
-    }
-  }
+	img {
+		padding: 10px;
+		position: relative;
+		top: 0px;
+		-webkit-transition: top 0.4s ease;
+		-moz-transition: top 0.4s ease;
+		-o-transition: top 0.4s ease;
+
+		&:hover,
+		&:focus {
+			top: -10px;
+		}
+	}
+}
